--- a/module2_docker/requirements.txt
+++ b/module2_docker/requirements.txt
@@ -1,7 +1,8 @@
+debugpy
 numpy==1.26.3
 opendatasets
 pandas==1.5.3
 scikit-learn==1.2.2
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==2.1.2+cpu
-transformers
+transformers==4.39.1
