--- a/module2_docker/settings.json
+++ b/module2_docker/settings.json
@@ -5,8 +5,9 @@
         "datetime_format": "%d.%m.%Y_%H.%M",
         "raw_data_dir": "data/raw_data",
         "processed_data_dir": "data/processed_data",
-        "dataset_path": "data/raw_data/IMDB_dataset.csv",
+        "logs_config": "logging/log_config.json",
         "results_dir": "results",
+        "dataset_path": "data/raw_data/IMDB_dataset.csv",
         "model_name": "distilbert-base-uncased-finetuned-sst-2-english",
         "kaggle_url": "https://www.kaggle.com/datasets/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews"
     },
