--- a/module2_docker/settings.json
+++ b/module2_docker/settings.json
@@ -16,7 +16,6 @@
         "validation_size": 0.16
     },
     "inference": {
-        "batch_size": 20,
-        "model_name": "model.pickle"
+        "batch_size": 20
     }
 }
